syntax = "proto3";
package user;
option go_package = "user";

import "google/api/annotations.proto";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post: "/v1/wings/users"
            body: "*"
        };
    }
}

message LoginRequest {
    string user = 1;
    string password = 2;
}
message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}
